--- a/home.html
+++ b/home.html
@@ -63,14 +63,30 @@
         <p>Segítünk az innováció minden lépésében!</p>
     </header>
     <nav>
+        1. Alapozás: Stratégiai keret létrehozása
         <a href="#analysis">Környezet elemzése</a>
         <a href="#stakeholders">Érdekelt felek</a>
         <a href="#intent">Innovációs szándék</a>
+        2. Innovációs kultúra kiépítése
+        •	Vezetői elkötelezettség
+        •	Kultúra fejlesztése
+        •	Képzés és ösztönzés
+        3. Innovációs stratégia és tervezés
+        •	Célok meghatározása
+        •	Kockázatok és lehetőségek kezelése
+        •	Erőforrások biztosítása
+        4. Innovációs kezdeményezések megvalósítása
         <a href="#opportunities">Lehetőségek</a>
         <a href="#concepts">Koncepciók</a>
         <a href="#solutions">Megoldások</a>
+        5. Innovációk bevezetése és értékelése
+        •	Bevezetés
+        •	Értékelés
         <a href="#learning">Tanulás</a>
+        6. Rendszeres visszacsatolás és folyamatos fejlesztés
         <a href="#performance">Teljesítménymérés</a>
+        •	Felülvizsgálat
+        •	Fejlesztési terv készítése
     </nav>
     <div class="container">
         <div class="section" id="analysis">
