--- a/home.html
+++ b/home.html
@@ -91,8 +91,11 @@
     <div class="container">
         <div class="section" id="analysis">
             <h2>Környezet elemzése</h2>
+        <div class="section" id="analysis">
+            <h2>Környezet elemzése</h2>
             <p>Elemzések (pl. SWOT, PESTLE) létrehozása és kezelése.</p>
             <a href="environment-analysis.html">Tovább az oldalra →</a>
+        </div>
         </div>
         <div class="section" id="stakeholders">
             <h2>Érdekelt felek</h2>
