--- a/home.html
+++ b/home.html
@@ -100,7 +100,8 @@
         </div>
         <div class="section" id="stakeholders">
             <h2>Érdekelt felek</h2>
-            <p>Érdekelt felek igényeinek és elvárásainak kezelése.</p>
+            <p>Értékelje a szervezet külső (piaci, technológiai, jogi) és belső tényezőit (kultúra, erőforrások).</p>p>
+            <p>Feladat: érdekelt felek igényeinek és elvárásainak kezelése.</p>
             <a href="stakeholders.html">Tovább az oldalra →</a>
         </div>
         <div class="section" id="intent">
