--- a/home.html
+++ b/home.html
@@ -94,13 +94,13 @@
             <p>Ez a lépés az innovációs rendszer megalapozására irányul. A szervezetnek fel kell térképeznie külső környezetét, például a piacokat, technológiai trendeket és jogi környezetet, valamint belső adottságait, mint a kultúra, erőforrások és képességek. Az érdekelt felek – ügyfelek, partnerek, alkalmazottak – igényeinek és elvárásainak megértése kulcsfontosságú, hogy az innováció valódi értéket teremtsen. Az innovációs szándék megfogalmazása világos irányt szab az innovációs tevékenységeknek, összhangban a szervezet stratégiai céljaival. Ez a lépés biztosítja, hogy az innováció nemcsak ötletszinten maradjon, hanem szervesen illeszkedjen a vállalat stratégiájába. </p>
             <div class="section" id="analysis">
                 <h2>Környezet elemzése</h2>
+                <p>Értékelje a szervezet külső (piaci, technológiai, jogi) és belső tényezőit (kultúra, erőforrások).</p>
                 <p>Elemzések (pl. SWOT, PESTLE) létrehozása és kezelése.</p>
                 <a href="environment-analysis.html">Tovább az oldalra →</a>
             </div>
         </div>
         <div class="section" id="stakeholders">
             <h2>Érdekelt felek</h2>
-            <p>Értékelje a szervezet külső (piaci, technológiai, jogi) és belső tényezőit (kultúra, erőforrások).</p>p>
             <p>Feladat: érdekelt felek igényeinek és elvárásainak kezelése.</p>
             <a href="stakeholders.html">Tovább az oldalra →</a>
         </div>
