--- a/home.html
+++ b/home.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+dat<!DOCTYPE html>
 <html lang="hu">
 <head>
     <meta charset="UTF-8">
@@ -95,7 +95,7 @@
             <div class="section" id="analysis">
                 <h2>Környezet elemzése</h2>
                 <p>Értékelje a szervezet külső (piaci, technológiai, jogi) és belső tényezőit (kultúra, erőforrások).</p>
-                <p>Elemzések (pl. SWOT, PESTLE) létrehozása és kezelése.</p>
+                <p>Feladat: elemzések (pl. SWOT, PESTLE) létrehozása és kezelése.</p>
                 <a href="environment-analysis.html">Tovább az oldalra →</a>
             </div>
         </div>
