--- a/home.html
+++ b/home.html
@@ -98,16 +98,18 @@ dat<!DOCTYPE html>
                 <p>Feladat: elemzések (pl. SWOT, PESTLE) létrehozása és kezelése.</p>
                 <a href="environment-analysis.html">Tovább az oldalra →</a>
             </div>
-        </div>
-        <div class="section" id="stakeholders">
-            <h2>Érdekelt felek</h2>
-            <p>Feladat: érdekelt felek igényeinek és elvárásainak kezelése.</p>
-            <a href="stakeholders.html">Tovább az oldalra →</a>
-        </div>
-        <div class="section" id="intent">
-            <h2>Innovációs szándék</h2>
-            <p>Az innovációs szándék meghatározása és nyilvántartása.</p>
-            <a href="innovation-intent.html">Tovább az oldalra →</a>
+            <div class="section" id="stakeholders">
+                <h2>Érdekelt felek igényeinek megértése</h2>
+                <p>Azonosítsa a partnerek, ügyfelek és alkalmazottak igényeit és elvárásait.</p>
+                <p>Feladat: érdekelt felek igényeinek és elvárásainak kezelése.</p>
+                <a href="stakeholders.html">Tovább az oldalra →</a>
+            </div>
+            <div class="section" id="intent">
+                <h2>Innovációs szándék megfogalmazása</h2>
+                <p>Határozza meg, hogyan fogja az innováció támogatni a szervezet stratégiáját és céljait.</p>
+                <p>Feladat: az innovációs szándék meghatározása és nyilvántartása.</p>
+                <a href="innovation-intent.html">Tovább az oldalra →</a>
+            </div>
         </div>
         <div class="section" id="opportunities">
             <h2>Lehetőségek azonosítása</h2>
