--- a/home.html
+++ b/home.html
@@ -12,7 +12,7 @@
             background-color: #f4f4f9;
         }
         header {
-            background-color: ##4c95af;
+            background-color: #4c95af;
             color: white;
             text-align: center;
             padding: 1rem 0;
@@ -23,7 +23,7 @@
         }
         nav a {
             text-decoration: none;
-            color: ##4c95af;
+            color: #4c95af;
             font-size: 1.2rem;
             margin: 0 15px;
         }
@@ -43,7 +43,7 @@
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
         }
         .section h2 {
-            color: ##4c95af;
+            color: #4c95af;
         }
         .section p {
             color: #555;
