--- a/home.html
+++ b/home.html
@@ -63,48 +63,30 @@
         <p>Segítünk az innováció minden lépésében!</p>
     </header>
     <nav>
-        1. Alapozás: Stratégiai keret létrehozása
-        <a href="#analysis">Környezet elemzése</a>
-        <a href="#stakeholders">Érdekelt felek</a>
-        <a href="#intent">Innovációs szándék</a>
-        2. Innovációs kultúra kiépítése
-        •	Vezetői elkötelezettség
-        •	Kultúra fejlesztése
-        •	Képzés és ösztönzés
-        3. Innovációs stratégia és tervezés
-        •	Célok meghatározása
-        •	Kockázatok és lehetőségek kezelése
-        •	Erőforrások biztosítása
-        4. Innovációs kezdeményezések megvalósítása
-        <a href="#opportunities">Lehetőségek</a>
-        <a href="#concepts">Koncepciók</a>
-        <a href="#solutions">Megoldások</a>
-        5. Innovációk bevezetése és értékelése
-        •	Bevezetés
-        •	Értékelés
-        <a href="#learning">Tanulás</a>
-        6. Rendszeres visszacsatolás és folyamatos fejlesztés
-        <a href="#performance">Teljesítménymérés</a>
-        •	Felülvizsgálat
-        •	Fejlesztési terv készítése
+        <a href="#foundation">1. Alapozás: Stratégiai keret létrehozása</a>
+        <a href="#culture">2. Innovációs kultúra kiépítése</a>
+        <a href="#strategy">3. Innovációs stratégia és tervezés</a>
+        <a href="#initiatives">4. Innovációs kezdeményezések megvalósítása</a>
+        <a href="#introduction">5. Innovációk bevezetése és értékelése</a>
+        <a href="#feedback">6. Rendszeres visszacsatolás és folyamatos fejlesztés</a>
     </nav>
     <div class="container">
-        <div class="section" id="analysis">
-            <h2>Alapozás: Stratégiai keret létrehozása</h2>
+        <div class="section" id="foundation">
+            <h2>1. Alapozás: Stratégiai keret létrehozása</h2>
             <p>Ez a lépés az innovációs rendszer megalapozására irányul. A szervezetnek fel kell térképeznie külső környezetét, például a piacokat, technológiai trendeket és jogi környezetet, valamint belső adottságait, mint a kultúra, erőforrások és képességek. Az érdekelt felek – ügyfelek, partnerek, alkalmazottak – igényeinek és elvárásainak megértése kulcsfontosságú, hogy az innováció valódi értéket teremtsen. Az innovációs szándék megfogalmazása világos irányt szab az innovációs tevékenységeknek, összhangban a szervezet stratégiai céljaival. Ez a lépés biztosítja, hogy az innováció nemcsak ötletszinten maradjon, hanem szervesen illeszkedjen a vállalat stratégiájába. </p>
-            <div class="section" id="analysis">
+            <div class="section">
                 <h2>Környezet elemzése</h2>
                 <p>Értékelje a szervezet külső (piaci, technológiai, jogi) és belső tényezőit (kultúra, erőforrások).</p>
                 <p>Feladat: elemzések (pl. SWOT, PESTLE) létrehozása és kezelése.</p>
                 <a href="environment-analysis.html">Tovább az oldalra →</a>
             </div>
-            <div class="section" id="stakeholders">
+            <div class="section">
                 <h2>Érdekelt felek igényeinek megértése</h2>
                 <p>Azonosítsa a partnerek, ügyfelek és alkalmazottak igényeit és elvárásait.</p>
                 <p>Feladat: érdekelt felek igényeinek és elvárásainak kezelése.</p>
                 <a href="stakeholders.html">Tovább az oldalra →</a>
             </div>
-            <div class="section" id="intent">
+            <div class="section">
                 <h2>Innovációs szándék megfogalmazása</h2>
                 <p>Határozza meg, hogyan fogja az innováció támogatni a szervezet stratégiáját és céljait.</p>
                 <p>Feladat: az innovációs szándék meghatározása és nyilvántartása.</p>
