--- a/home.html
+++ b/home.html
@@ -93,30 +93,115 @@
                 <a href="innovation-intent.html">Tovább az oldalra →</a>
             </div>
         </div>
-        <div class="section" id="opportunities">
-            <h2>Lehetőségek azonosítása</h2>
-            <p>Innovációs lehetőségek feltárása és rangsorolása.</p>
-            <a href="opportunities.html">Tovább az oldalra →</a>
+        <div class="section" id="culture">
+            <h2>2. Innovációs kultúra kiépítése</h2>
+            <p>Ez a lépés az innovációs rendszer megalapozására irányul. A szervezetnek fel kell térképeznie külső környezetét, például a piacokat, technológiai trendeket és jogi környezetet, valamint belső adottságait, mint a kultúra, erőforrások és képességek. Az érdekelt felek – ügyfelek, partnerek, alkalmazottak – igényeinek és elvárásainak megértése kulcsfontosságú, hogy az innováció valódi értéket teremtsen. Az innovációs szándék megfogalmazása világos irányt szab az innovációs tevékenységeknek, összhangban a szervezet stratégiai céljaival. Ez a lépés biztosítja, hogy az innováció nemcsak ötletszinten maradjon, hanem szervesen illeszkedjen a vállalat stratégiájába. </p>
+            <div class="section">
+                <h2>Környezet elemzése</h2>
+                <p>Értékelje a szervezet külső (piaci, technológiai, jogi) és belső tényezőit (kultúra, erőforrások).</p>
+                <p>Feladat: elemzések (pl. SWOT, PESTLE) létrehozása és kezelése.</p>
+                <a href="environment-analysis.html">Tovább az oldalra →</a>
+            </div>
+            <div class="section">
+                <h2>Érdekelt felek igényeinek megértése</h2>
+                <p>Azonosítsa a partnerek, ügyfelek és alkalmazottak igényeit és elvárásait.</p>
+                <p>Feladat: érdekelt felek igényeinek és elvárásainak kezelése.</p>
+                <a href="stakeholders.html">Tovább az oldalra →</a>
+            </div>
+            <div class="section">
+                <h2>Innovációs szándék megfogalmazása</h2>
+                <p>Határozza meg, hogyan fogja az innováció támogatni a szervezet stratégiáját és céljait.</p>
+                <p>Feladat: az innovációs szándék meghatározása és nyilvántartása.</p>
+                <a href="innovation-intent.html">Tovább az oldalra →</a>
+            </div>
         </div>
-        <div class="section" id="concepts">
-            <h2>Koncepciók kidolgozása</h2>
-            <p>Azonosított lehetőségek koncepcióvá alakítása.</p>
-            <a href="concept-development.html">Tovább az oldalra →</a>
+        <div class="section" id="strategy">
+            <h2>3. Innovációs stratégia és tervezés</h2>
+            <p>Ez a lépés az innovációs rendszer megalapozására irányul. A szervezetnek fel kell térképeznie külső környezetét, például a piacokat, technológiai trendeket és jogi környezetet, valamint belső adottságait, mint a kultúra, erőforrások és képességek. Az érdekelt felek – ügyfelek, partnerek, alkalmazottak – igényeinek és elvárásainak megértése kulcsfontosságú, hogy az innováció valódi értéket teremtsen. Az innovációs szándék megfogalmazása világos irányt szab az innovációs tevékenységeknek, összhangban a szervezet stratégiai céljaival. Ez a lépés biztosítja, hogy az innováció nemcsak ötletszinten maradjon, hanem szervesen illeszkedjen a vállalat stratégiájába. </p>
+            <div class="section">
+                <h2>Környezet elemzése</h2>
+                <p>Értékelje a szervezet külső (piaci, technológiai, jogi) és belső tényezőit (kultúra, erőforrások).</p>
+                <p>Feladat: elemzések (pl. SWOT, PESTLE) létrehozása és kezelése.</p>
+                <a href="environment-analysis.html">Tovább az oldalra →</a>
+            </div>
+            <div class="section">
+                <h2>Érdekelt felek igényeinek megértése</h2>
+                <p>Azonosítsa a partnerek, ügyfelek és alkalmazottak igényeit és elvárásait.</p>
+                <p>Feladat: érdekelt felek igényeinek és elvárásainak kezelése.</p>
+                <a href="stakeholders.html">Tovább az oldalra →</a>
+            </div>
+            <div class="section">
+                <h2>Innovációs szándék megfogalmazása</h2>
+                <p>Határozza meg, hogyan fogja az innováció támogatni a szervezet stratégiáját és céljait.</p>
+                <p>Feladat: az innovációs szándék meghatározása és nyilvántartása.</p>
+                <a href="innovation-intent.html">Tovább az oldalra →</a>
+            </div>
         </div>
-        <div class="section" id="solutions">
-            <h2>Megoldások fejlesztése</h2>
-            <p>Validált koncepciók konkrét megoldásokká alakítása.</p>
-            <a href="solution-development.html">Tovább az oldalra →</a>
+        <div class="section" id="initiatives">
+            <h2>4. Innovációs kezdeményezések megvalósítása</h2>
+            <p>Ez a lépés az innovációs rendszer megalapozására irányul. A szervezetnek fel kell térképeznie külső környezetét, például a piacokat, technológiai trendeket és jogi környezetet, valamint belső adottságait, mint a kultúra, erőforrások és képességek. Az érdekelt felek – ügyfelek, partnerek, alkalmazottak – igényeinek és elvárásainak megértése kulcsfontosságú, hogy az innováció valódi értéket teremtsen. Az innovációs szándék megfogalmazása világos irányt szab az innovációs tevékenységeknek, összhangban a szervezet stratégiai céljaival. Ez a lépés biztosítja, hogy az innováció nemcsak ötletszinten maradjon, hanem szervesen illeszkedjen a vállalat stratégiájába. </p>
+            <div class="section">
+                <h2>Környezet elemzése</h2>
+                <p>Értékelje a szervezet külső (piaci, technológiai, jogi) és belső tényezőit (kultúra, erőforrások).</p>
+                <p>Feladat: elemzések (pl. SWOT, PESTLE) létrehozása és kezelése.</p>
+                <a href="environment-analysis.html">Tovább az oldalra →</a>
+            </div>
+            <div class="section">
+                <h2>Érdekelt felek igényeinek megértése</h2>
+                <p>Azonosítsa a partnerek, ügyfelek és alkalmazottak igényeit és elvárásait.</p>
+                <p>Feladat: érdekelt felek igényeinek és elvárásainak kezelése.</p>
+                <a href="stakeholders.html">Tovább az oldalra →</a>
+            </div>
+            <div class="section">
+                <h2>Innovációs szándék megfogalmazása</h2>
+                <p>Határozza meg, hogyan fogja az innováció támogatni a szervezet stratégiáját és céljait.</p>
+                <p>Feladat: az innovációs szándék meghatározása és nyilvántartása.</p>
+                <a href="innovation-intent.html">Tovább az oldalra →</a>
+            </div>
         </div>
-        <div class="section" id="learning">
-            <h2>Tanulás és fejlesztés</h2>
-            <p>A korábbi projektek tanulságainak elemzése és a jövőbeli fejlesztések megtervezése.</p>
-            <a href="learning-development.html">Tovább az oldalra →</a>
+        <div class="section" id="introduction">
+            <h2>5. Innovációk bevezetése és értékelése</h2>
+            <p>Ez a lépés az innovációs rendszer megalapozására irányul. A szervezetnek fel kell térképeznie külső környezetét, például a piacokat, technológiai trendeket és jogi környezetet, valamint belső adottságait, mint a kultúra, erőforrások és képességek. Az érdekelt felek – ügyfelek, partnerek, alkalmazottak – igényeinek és elvárásainak megértése kulcsfontosságú, hogy az innováció valódi értéket teremtsen. Az innovációs szándék megfogalmazása világos irányt szab az innovációs tevékenységeknek, összhangban a szervezet stratégiai céljaival. Ez a lépés biztosítja, hogy az innováció nemcsak ötletszinten maradjon, hanem szervesen illeszkedjen a vállalat stratégiájába. </p>
+            <div class="section">
+                <h2>Környezet elemzése</h2>
+                <p>Értékelje a szervezet külső (piaci, technológiai, jogi) és belső tényezőit (kultúra, erőforrások).</p>
+                <p>Feladat: elemzések (pl. SWOT, PESTLE) létrehozása és kezelése.</p>
+                <a href="environment-analysis.html">Tovább az oldalra →</a>
+            </div>
+            <div class="section">
+                <h2>Érdekelt felek igényeinek megértése</h2>
+                <p>Azonosítsa a partnerek, ügyfelek és alkalmazottak igényeit és elvárásait.</p>
+                <p>Feladat: érdekelt felek igényeinek és elvárásainak kezelése.</p>
+                <a href="stakeholders.html">Tovább az oldalra →</a>
+            </div>
+            <div class="section">
+                <h2>Innovációs szándék megfogalmazása</h2>
+                <p>Határozza meg, hogyan fogja az innováció támogatni a szervezet stratégiáját és céljait.</p>
+                <p>Feladat: az innovációs szándék meghatározása és nyilvántartása.</p>
+                <a href="innovation-intent.html">Tovább az oldalra →</a>
+            </div>
         </div>
-        <div class="section" id="performance">
-            <h2>Teljesítménymérés</h2>
-            <p>Innovációs folyamatok és projektek teljesítményének követése.</p>
-            <a href="performance.html">Tovább az oldalra →</a>
+        <div class="section" id="feedback">
+            <h2>6. Rendszeres visszacsatolás és folyamatos fejlesztés</h2>
+            <p>Ez a lépés az innovációs rendszer megalapozására irányul. A szervezetnek fel kell térképeznie külső környezetét, például a piacokat, technológiai trendeket és jogi környezetet, valamint belső adottságait, mint a kultúra, erőforrások és képességek. Az érdekelt felek – ügyfelek, partnerek, alkalmazottak – igényeinek és elvárásainak megértése kulcsfontosságú, hogy az innováció valódi értéket teremtsen. Az innovációs szándék megfogalmazása világos irányt szab az innovációs tevékenységeknek, összhangban a szervezet stratégiai céljaival. Ez a lépés biztosítja, hogy az innováció nemcsak ötletszinten maradjon, hanem szervesen illeszkedjen a vállalat stratégiájába. </p>
+            <div class="section">
+                <h2>Környezet elemzése</h2>
+                <p>Értékelje a szervezet külső (piaci, technológiai, jogi) és belső tényezőit (kultúra, erőforrások).</p>
+                <p>Feladat: elemzések (pl. SWOT, PESTLE) létrehozása és kezelése.</p>
+                <a href="environment-analysis.html">Tovább az oldalra →</a>
+            </div>
+            <div class="section">
+                <h2>Érdekelt felek igényeinek megértése</h2>
+                <p>Azonosítsa a partnerek, ügyfelek és alkalmazottak igényeit és elvárásait.</p>
+                <p>Feladat: érdekelt felek igényeinek és elvárásainak kezelése.</p>
+                <a href="stakeholders.html">Tovább az oldalra →</a>
+            </div>
+            <div class="section">
+                <h2>Innovációs szándék megfogalmazása</h2>
+                <p>Határozza meg, hogyan fogja az innováció támogatni a szervezet stratégiáját és céljait.</p>
+                <p>Feladat: az innovációs szándék meghatározása és nyilvántartása.</p>
+                <a href="innovation-intent.html">Tovább az oldalra →</a>
+            </div>
         </div>
     </div>
     <footer>
