--- a/home.html
+++ b/home.html
@@ -95,7 +95,7 @@
         </div>
         <div class="section" id="culture">
             <h2>2. Innovációs kultúra kiépítése</h2>
-            <p>Ez a lépés az innovációs rendszer megalapozására irányul. A szervezetnek fel kell térképeznie külső környezetét, például a piacokat, technológiai trendeket és jogi környezetet, valamint belső adottságait, mint a kultúra, erőforrások és képességek. Az érdekelt felek – ügyfelek, partnerek, alkalmazottak – igényeinek és elvárásainak megértése kulcsfontosságú, hogy az innováció valódi értéket teremtsen. Az innovációs szándék megfogalmazása világos irányt szab az innovációs tevékenységeknek, összhangban a szervezet stratégiai céljaival. Ez a lépés biztosítja, hogy az innováció nemcsak ötletszinten maradjon, hanem szervesen illeszkedjen a vállalat stratégiájába. </p>
+            <p>Az innovációs kultúra a kreativitás, együttműködés és folyamatos tanulás alapjaira épül. A felső vezetés példamutatása és támogatása elengedhetetlen az innováció előmozdításához. A kultúra fejlesztése magában foglalja az alkalmazottak ösztönzését arra, hogy merjenek újítani, kockázatokat vállalni, és megosztani ötleteiket. Az ösztönző rendszerek, például bónuszok vagy elismerések, növelik a dolgozók elkötelezettségét az innováció iránt. Az erős innovációs kultúra nemcsak a kreatív gondolkodást támogatja, hanem elősegíti az eredményorientált megvalósítást is. </p>
             <div class="section">
                 <h2>Környezet elemzése</h2>
                 <p>Értékelje a szervezet külső (piaci, technológiai, jogi) és belső tényezőit (kultúra, erőforrások).</p>
@@ -117,7 +117,7 @@
         </div>
         <div class="section" id="strategy">
             <h2>3. Innovációs stratégia és tervezés</h2>
-            <p>Ez a lépés az innovációs rendszer megalapozására irányul. A szervezetnek fel kell térképeznie külső környezetét, például a piacokat, technológiai trendeket és jogi környezetet, valamint belső adottságait, mint a kultúra, erőforrások és képességek. Az érdekelt felek – ügyfelek, partnerek, alkalmazottak – igényeinek és elvárásainak megértése kulcsfontosságú, hogy az innováció valódi értéket teremtsen. Az innovációs szándék megfogalmazása világos irányt szab az innovációs tevékenységeknek, összhangban a szervezet stratégiai céljaival. Ez a lépés biztosítja, hogy az innováció nemcsak ötletszinten maradjon, hanem szervesen illeszkedjen a vállalat stratégiájába. </p>
+            <p>Ebben a szakaszban a szervezet meghatározza, hogy milyen konkrét célokat szeretne elérni az innováció révén, és milyen erőforrásokat fog ehhez felhasználni. Az innovációs célok mérhetőek és reálisak kell legyenek, hogy következetesen lehessen értékelni a haladást. A kockázatok és lehetőségek feltárása biztosítja, hogy a vállalat proaktívan kezelhesse a váratlan helyzeteket és maximálisan kihasználhassa az innovációban rejlő lehetőségeket. A szükséges erőforrások – például humán tőke, pénzügyi eszközök, technológiai megoldások – azonosítása és biztosítása elősegíti az eredményes megvalósítást. Ez a lépés segíti a szervezetet abban, hogy egyértelmű kereteket állítson fel az innovációs folyamatokhoz. </p>
             <div class="section">
                 <h2>Környezet elemzése</h2>
                 <p>Értékelje a szervezet külső (piaci, technológiai, jogi) és belső tényezőit (kultúra, erőforrások).</p>
@@ -139,7 +139,7 @@
         </div>
         <div class="section" id="initiatives">
             <h2>4. Innovációs kezdeményezések megvalósítása</h2>
-            <p>Ez a lépés az innovációs rendszer megalapozására irányul. A szervezetnek fel kell térképeznie külső környezetét, például a piacokat, technológiai trendeket és jogi környezetet, valamint belső adottságait, mint a kultúra, erőforrások és képességek. Az érdekelt felek – ügyfelek, partnerek, alkalmazottak – igényeinek és elvárásainak megértése kulcsfontosságú, hogy az innováció valódi értéket teremtsen. Az innovációs szándék megfogalmazása világos irányt szab az innovációs tevékenységeknek, összhangban a szervezet stratégiai céljaival. Ez a lépés biztosítja, hogy az innováció nemcsak ötletszinten maradjon, hanem szervesen illeszkedjen a vállalat stratégiájába. </p>
+            <p>Az innovációs folyamat kulcsfontosságú része az ötletek azonosítása, validálása és végleges fejlesztése. A lehetőségek azonosítása magában foglalja a releváns piaci igények és problémák feltárását, valamint az ezekre válaszoló innovációs ötletek kidolgozását. A koncepciók validálása során a kritikus bizonytalanságokat és feltételezéseket tesztelik, hogy megalapozott döntéseket hozzanak a folytatásról vagy a változtatásról. A végleges megoldások fejlesztése során a koncepciók működőképes termékekké, szolgáltatásokká vagy folyamatokká alakulnak, miközben a kapcsolódó kockázatokat is kezelik. Ez a lépés biztosítja, hogy az ötletek tényleges megoldásokká váljanak, amelyek értéket teremtenek a szervezet és az érdekelt felek számára. </p>
             <div class="section">
                 <h2>Környezet elemzése</h2>
                 <p>Értékelje a szervezet külső (piaci, technológiai, jogi) és belső tényezőit (kultúra, erőforrások).</p>
@@ -161,7 +161,7 @@
         </div>
         <div class="section" id="introduction">
             <h2>5. Innovációk bevezetése és értékelése</h2>
-            <p>Ez a lépés az innovációs rendszer megalapozására irányul. A szervezetnek fel kell térképeznie külső környezetét, például a piacokat, technológiai trendeket és jogi környezetet, valamint belső adottságait, mint a kultúra, erőforrások és képességek. Az érdekelt felek – ügyfelek, partnerek, alkalmazottak – igényeinek és elvárásainak megértése kulcsfontosságú, hogy az innováció valódi értéket teremtsen. Az innovációs szándék megfogalmazása világos irányt szab az innovációs tevékenységeknek, összhangban a szervezet stratégiai céljaival. Ez a lépés biztosítja, hogy az innováció nemcsak ötletszinten maradjon, hanem szervesen illeszkedjen a vállalat stratégiájába. </p>
+            <p>Az innovációs megoldások bevezetése az értékteremtési folyamat utolsó, de létfontosságú szakasza. A bevezetési terv magában foglalja a gyártást, szolgáltatásnyújtást, promóciót és támogatást az érdekelt felek számára. Az értékelési szakasz során a szervezet nyomon követi a megoldások elfogadását és hatásait, például a felhasználói elégedettséget vagy a pénzügyi eredményeket. Az új ismeretek rögzítése és a tanulságok levonása elősegíti a jövőbeli innovációk sikerességét. A visszacsatolások alapján a szervezet finomíthatja meglévő megoldásait és új lehetőségeket azonosíthat. Ez a szakasz garantálja, hogy az innováció tényleges értéket teremtsen és a tanulságok beépüljenek a következő kezdeményezésekbe. </p>
             <div class="section">
                 <h2>Környezet elemzése</h2>
                 <p>Értékelje a szervezet külső (piaci, technológiai, jogi) és belső tényezőit (kultúra, erőforrások).</p>
@@ -183,7 +183,7 @@
         </div>
         <div class="section" id="feedback">
             <h2>6. Rendszeres visszacsatolás és folyamatos fejlesztés</h2>
-            <p>Ez a lépés az innovációs rendszer megalapozására irányul. A szervezetnek fel kell térképeznie külső környezetét, például a piacokat, technológiai trendeket és jogi környezetet, valamint belső adottságait, mint a kultúra, erőforrások és képességek. Az érdekelt felek – ügyfelek, partnerek, alkalmazottak – igényeinek és elvárásainak megértése kulcsfontosságú, hogy az innováció valódi értéket teremtsen. Az innovációs szándék megfogalmazása világos irányt szab az innovációs tevékenységeknek, összhangban a szervezet stratégiai céljaival. Ez a lépés biztosítja, hogy az innováció nemcsak ötletszinten maradjon, hanem szervesen illeszkedjen a vállalat stratégiájába. </p>
+            <p>A teljes innovációs rendszer rendszeres értékelése és fejlesztése alapvető a hosszú távú sikerhez. A teljesítményindikátorok, mint például a ROI (befektetésarányos megtérülés) vagy a felhasználói elégedettség, mérik a rendszer hatékonyságát és eredményességét. A menedzsment időszakosan felülvizsgálja az innovációs rendszert, hogy biztosítsa annak relevanciáját és megfelelőségét. A fejlesztési javaslatok alapján a rendszer finomhangolása lehetővé teszi, hogy a szervezet gyorsan reagáljon a változó piaci környezetre és igényekre. Ez a szakasz garantálja, hogy az innovációs folyamatok mindig naprakészek és optimalizáltak legyenek. </p>
             <div class="section">
                 <h2>Környezet elemzése</h2>
                 <p>Értékelje a szervezet külső (piaci, technológiai, jogi) és belső tényezőit (kultúra, erőforrások).</p>
