--- a/home.html
+++ b/home.html
@@ -77,130 +77,117 @@
             <div class="section">
                 <h2>Környezet elemzése</h2>
                 <p>Értékelje a szervezet külső (piaci, technológiai, jogi) és belső tényezőit (kultúra, erőforrások).</p>
-                <p>Feladat: elemzések (pl. SWOT, PESTLE) létrehozása és kezelése.</p>
                 <a href="environment-analysis.html">Tovább az oldalra →</a>
             </div>
             <div class="section">
                 <h2>Érdekelt felek igényeinek megértése</h2>
                 <p>Azonosítsa a partnerek, ügyfelek és alkalmazottak igényeit és elvárásait.</p>
-                <p>Feladat: érdekelt felek igényeinek és elvárásainak kezelése.</p>
                 <a href="stakeholders.html">Tovább az oldalra →</a>
             </div>
             <div class="section">
                 <h2>Innovációs szándék megfogalmazása</h2>
                 <p>Határozza meg, hogyan fogja az innováció támogatni a szervezet stratégiáját és céljait.</p>
-                <p>Feladat: az innovációs szándék meghatározása és nyilvántartása.</p>
                 <a href="innovation-intent.html">Tovább az oldalra →</a>
             </div>
         </div>
         <div class="section" id="culture">
             <h2>2. Innovációs kultúra kiépítése</h2>
-            <p>Az innovációs kultúra a kreativitás, együttműködés és folyamatos tanulás alapjaira épül. A felső vezetés példamutatása és támogatása elengedhetetlen az innováció előmozdításához. A kultúra fejlesztése magában foglalja az alkalmazottak ösztönzését arra, hogy merjenek újítani, kockázatokat vállalni, és megosztani ötleteiket. Az ösztönző rendszerek, például bónuszok vagy elismerések, növelik a dolgozók elkötelezettségét az innováció iránt. Az erős innovációs kultúra nemcsak a kreatív gondolkodást támogatja, hanem elősegíti az eredményorientált megvalósítást is. </p>
+            <p>Ez a lépés az innovációs rendszer megalapozására irányul. A szervezetnek fel kell térképeznie külső környezetét, például a piacokat, technológiai trendeket és jogi környezetet, valamint belső adottságait, mint a kultúra, erőforrások és képességek. Az érdekelt felek – ügyfelek, partnerek, alkalmazottak – igényeinek és elvárásainak megértése kulcsfontosságú, hogy az innováció valódi értéket teremtsen. Az innovációs szándék megfogalmazása világos irányt szab az innovációs tevékenységeknek, összhangban a szervezet stratégiai céljaival. Ez a lépés biztosítja, hogy az innováció nemcsak ötletszinten maradjon, hanem szervesen illeszkedjen a vállalat stratégiájába. </p>
             <div class="section">
-                <h2>Környezet elemzése</h2>
-                <p>Értékelje a szervezet külső (piaci, technológiai, jogi) és belső tényezőit (kultúra, erőforrások).</p>
-                <p>Feladat: elemzések (pl. SWOT, PESTLE) létrehozása és kezelése.</p>
-                <a href="environment-analysis.html">Tovább az oldalra →</a>
+                <h2>Vezetői elkötelezettség</h2>
+                <p>A felső vezetés biztosítsa az innováció fontosságát és támogassa annak beágyazását. </p>
+                <a href="management_engagement.html">Tovább az oldalra →</a>
             </div>
             <div class="section">
-                <h2>Érdekelt felek igényeinek megértése</h2>
-                <p>Azonosítsa a partnerek, ügyfelek és alkalmazottak igényeit és elvárásait.</p>
-                <p>Feladat: érdekelt felek igényeinek és elvárásainak kezelése.</p>
-                <a href="stakeholders.html">Tovább az oldalra →</a>
+                <h2>Kultúra fejlesztése</h2>
+                <p>Növelje a kreativitást, nyitottságot és kockázatvállalási hajlandóságot a szervezetben</p>
+                <a href="ulture_development>Tovább az oldalra →</a>
             </div>
             <div class="section">
-                <h2>Innovációs szándék megfogalmazása</h2>
-                <p>Határozza meg, hogyan fogja az innováció támogatni a szervezet stratégiáját és céljait.</p>
-                <p>Feladat: az innovációs szándék meghatározása és nyilvántartása.</p>
-                <a href="innovation-intent.html">Tovább az oldalra →</a>
+                <h2>Képzés és ösztönzés</h2>
+                <p>Alakítson ki ösztönző rendszert, amely elismeri az innovációs hozzájárulásokat.</p>
+                <a href="training-incentive.html">Tovább az oldalra →</a>
             </div>
         </div>
         <div class="section" id="strategy">
             <h2>3. Innovációs stratégia és tervezés</h2>
-            <p>Ebben a szakaszban a szervezet meghatározza, hogy milyen konkrét célokat szeretne elérni az innováció révén, és milyen erőforrásokat fog ehhez felhasználni. Az innovációs célok mérhetőek és reálisak kell legyenek, hogy következetesen lehessen értékelni a haladást. A kockázatok és lehetőségek feltárása biztosítja, hogy a vállalat proaktívan kezelhesse a váratlan helyzeteket és maximálisan kihasználhassa az innovációban rejlő lehetőségeket. A szükséges erőforrások – például humán tőke, pénzügyi eszközök, technológiai megoldások – azonosítása és biztosítása elősegíti az eredményes megvalósítást. Ez a lépés segíti a szervezetet abban, hogy egyértelmű kereteket állítson fel az innovációs folyamatokhoz. </p>
+            <p>Ez a lépés az innovációs rendszer megalapozására irányul. A szervezetnek fel kell térképeznie külső környezetét, például a piacokat, technológiai trendeket és jogi környezetet, valamint belső adottságait, mint a kultúra, erőforrások és képességek. Az érdekelt felek – ügyfelek, partnerek, alkalmazottak – igényeinek és elvárásainak megértése kulcsfontosságú, hogy az innováció valódi értéket teremtsen. Az innovációs szándék megfogalmazása világos irányt szab az innovációs tevékenységeknek, összhangban a szervezet stratégiai céljaival. Ez a lépés biztosítja, hogy az innováció nemcsak ötletszinten maradjon, hanem szervesen illeszkedjen a vállalat stratégiájába. </p>
             <div class="section">
-                <h2>Környezet elemzése</h2>
-                <p>Értékelje a szervezet külső (piaci, technológiai, jogi) és belső tényezőit (kultúra, erőforrások).</p>
-                <p>Feladat: elemzések (pl. SWOT, PESTLE) létrehozása és kezelése.</p>
-                <a href="environment-analysis.html">Tovább az oldalra →</a>
+                <h2>Célok meghatározása</h2>
+                <p>Hozzon létre mérhető innovációs célokat.</p>
+                <a href="goal_definition.html">Tovább az oldalra →</a>
             </div>
             <div class="section">
-                <h2>Érdekelt felek igényeinek megértése</h2>
-                <p>Azonosítsa a partnerek, ügyfelek és alkalmazottak igényeit és elvárásait.</p>
-                <p>Feladat: érdekelt felek igényeinek és elvárásainak kezelése.</p>
-                <a href="stakeholders.html">Tovább az oldalra →</a>
+                <h2>Kockázatok és lehetőségek kezelése</h2>
+                <p>Térképezze fel a kockázatokat és lehetőségeket, és dolgozzon ki tervet ezek kezelésére.</p>
+                <a href="risk-opportunity.html">Tovább az oldalra →</a>
             </div>
             <div class="section">
-                <h2>Innovációs szándék megfogalmazása</h2>
-                <p>Határozza meg, hogyan fogja az innováció támogatni a szervezet stratégiáját és céljait.</p>
-                <p>Feladat: az innovációs szándék meghatározása és nyilvántartása.</p>
-                <a href="innovation-intent.html">Tovább az oldalra →</a>
+                <h2>Erőforrások biztosítása</h2>
+                <p>Azonosítsa és rendelje hozzá a szükséges erőforrásokat (humán, pénzügyi, technológiai).</p>
+                <a href="resource-provision.html">Tovább az oldalra →</a>
             </div>
         </div>
         <div class="section" id="initiatives">
             <h2>4. Innovációs kezdeményezések megvalósítása</h2>
-            <p>Az innovációs folyamat kulcsfontosságú része az ötletek azonosítása, validálása és végleges fejlesztése. A lehetőségek azonosítása magában foglalja a releváns piaci igények és problémák feltárását, valamint az ezekre válaszoló innovációs ötletek kidolgozását. A koncepciók validálása során a kritikus bizonytalanságokat és feltételezéseket tesztelik, hogy megalapozott döntéseket hozzanak a folytatásról vagy a változtatásról. A végleges megoldások fejlesztése során a koncepciók működőképes termékekké, szolgáltatásokká vagy folyamatokká alakulnak, miközben a kapcsolódó kockázatokat is kezelik. Ez a lépés biztosítja, hogy az ötletek tényleges megoldásokká váljanak, amelyek értéket teremtenek a szervezet és az érdekelt felek számára. </p>
+            <p>Ez a lépés az innovációs rendszer megalapozására irányul. A szervezetnek fel kell térképeznie külső környezetét, például a piacokat, technológiai trendeket és jogi környezetet, valamint belső adottságait, mint a kultúra, erőforrások és képességek. Az érdekelt felek – ügyfelek, partnerek, alkalmazottak – igényeinek és elvárásainak megértése kulcsfontosságú, hogy az innováció valódi értéket teremtsen. Az innovációs szándék megfogalmazása világos irányt szab az innovációs tevékenységeknek, összhangban a szervezet stratégiai céljaival. Ez a lépés biztosítja, hogy az innováció nemcsak ötletszinten maradjon, hanem szervesen illeszkedjen a vállalat stratégiájába. </p>
             <div class="section">
-                <h2>Környezet elemzése</h2>
-                <p>Értékelje a szervezet külső (piaci, technológiai, jogi) és belső tényezőit (kultúra, erőforrások).</p>
-                <p>Feladat: elemzések (pl. SWOT, PESTLE) létrehozása és kezelése.</p>
+                <h2>Lehetőségek azonosítása</h2>
+                <p>Gyűjtse össze a releváns ötleteket és problématerületeket.</p>
                 <a href="environment-analysis.html">Tovább az oldalra →</a>
             </div>
             <div class="section">
-                <h2>Érdekelt felek igényeinek megértése</h2>
-                <p>Azonosítsa a partnerek, ügyfelek és alkalmazottak igényeit és elvárásait.</p>
-                <p>Feladat: érdekelt felek igényeinek és elvárásainak kezelése.</p>
-                <a href="stakeholders.html">Tovább az oldalra →</a>
+                <h2>Koncepciók kidolgozása</h2>
+                <p>Tervezze meg a potenciális megoldásokat, és értékelje azok értékét.</p>
+                <a href="concept-development.html">Tovább az oldalra →</a>
             </div>
             <div class="section">
-                <h2>Innovációs szándék megfogalmazása</h2>
-                <p>Határozza meg, hogyan fogja az innováció támogatni a szervezet stratégiáját és céljait.</p>
-                <p>Feladat: az innovációs szándék meghatározása és nyilvántartása.</p>
-                <a href="innovation-intent.html">Tovább az oldalra →</a>
+                <h2>Koncepciók validálása</h2>
+                <p>Tesztelje az ötleteket, csökkentse a bizonytalanságokat és készítse elő a megoldások kidolgozását.</p>
+                <a href="concept-validation.html">Tovább az oldalra →</a>
+            </div>
+            <div class="section">
+                <h2>Megoldások fejlesztése</h2>
+                <p>Fejlessze ki a végleges megoldásokat, és alakítsa ki a megvalósításhoz szükséges képességeket.</p>
+                <a href="concept-validation.html">Tovább az oldalra →</a>
             </div>
         </div>
         <div class="section" id="introduction">
             <h2>5. Innovációk bevezetése és értékelése</h2>
-            <p>Az innovációs megoldások bevezetése az értékteremtési folyamat utolsó, de létfontosságú szakasza. A bevezetési terv magában foglalja a gyártást, szolgáltatásnyújtást, promóciót és támogatást az érdekelt felek számára. Az értékelési szakasz során a szervezet nyomon követi a megoldások elfogadását és hatásait, például a felhasználói elégedettséget vagy a pénzügyi eredményeket. Az új ismeretek rögzítése és a tanulságok levonása elősegíti a jövőbeli innovációk sikerességét. A visszacsatolások alapján a szervezet finomíthatja meglévő megoldásait és új lehetőségeket azonosíthat. Ez a szakasz garantálja, hogy az innováció tényleges értéket teremtsen és a tanulságok beépüljenek a következő kezdeményezésekbe. </p>
+            <p>Ez a lépés az innovációs rendszer megalapozására irányul. A szervezetnek fel kell térképeznie külső környezetét, például a piacokat, technológiai trendeket és jogi környezetet, valamint belső adottságait, mint a kultúra, erőforrások és képességek. Az érdekelt felek – ügyfelek, partnerek, alkalmazottak – igényeinek és elvárásainak megértése kulcsfontosságú, hogy az innováció valódi értéket teremtsen. Az innovációs szándék megfogalmazása világos irányt szab az innovációs tevékenységeknek, összhangban a szervezet stratégiai céljaival. Ez a lépés biztosítja, hogy az innováció nemcsak ötletszinten maradjon, hanem szervesen illeszkedjen a vállalat stratégiájába. </p>
             <div class="section">
-                <h2>Környezet elemzése</h2>
-                <p>Értékelje a szervezet külső (piaci, technológiai, jogi) és belső tényezőit (kultúra, erőforrások).</p>
-                <p>Feladat: elemzések (pl. SWOT, PESTLE) létrehozása és kezelése.</p>
-                <a href="environment-analysis.html">Tovább az oldalra →</a>
+                <h2>Bevezetés</h2>
+                <p>Valósítsa meg a megoldásokat, és mérje azok hatását az érdekelt felek számára.</p>
+                <a href="introduction-support.html">Tovább az oldalra →</a>
             </div>
             <div class="section">
-                <h2>Érdekelt felek igényeinek megértése</h2>
-                <p>Azonosítsa a partnerek, ügyfelek és alkalmazottak igényeit és elvárásait.</p>
-                <p>Feladat: érdekelt felek igényeinek és elvárásainak kezelése.</p>
-                <a href="stakeholders.html">Tovább az oldalra →</a>
+                <h2>Értékelés</h2>
+                <p>Kövesse nyomon az innovációk hatékonyságát az értékteremtés szempontjából.</p>
+                <a href="innovation-evaluation.html">Tovább az oldalra →</a>
             </div>
             <div class="section">
-                <h2>Innovációs szándék megfogalmazása</h2>
-                <p>Határozza meg, hogyan fogja az innováció támogatni a szervezet stratégiáját és céljait.</p>
-                <p>Feladat: az innovációs szándék meghatározása és nyilvántartása.</p>
-                <a href="innovation-intent.html">Tovább az oldalra →</a>
+                <h2>Tanulás és fejlesztés</h2>
+                <p>Vonjon le tanulságokat a sikerekből és kudarcokból az újabb innovációkhoz.</p>
+                <a href="learning-development.html">Tovább az oldalra →</a>
             </div>
         </div>
         <div class="section" id="feedback">
             <h2>6. Rendszeres visszacsatolás és folyamatos fejlesztés</h2>
-            <p>A teljes innovációs rendszer rendszeres értékelése és fejlesztése alapvető a hosszú távú sikerhez. A teljesítményindikátorok, mint például a ROI (befektetésarányos megtérülés) vagy a felhasználói elégedettség, mérik a rendszer hatékonyságát és eredményességét. A menedzsment időszakosan felülvizsgálja az innovációs rendszert, hogy biztosítsa annak relevanciáját és megfelelőségét. A fejlesztési javaslatok alapján a rendszer finomhangolása lehetővé teszi, hogy a szervezet gyorsan reagáljon a változó piaci környezetre és igényekre. Ez a szakasz garantálja, hogy az innovációs folyamatok mindig naprakészek és optimalizáltak legyenek. </p>
+            <p>Ez a lépés az innovációs rendszer megalapozására irányul. A szervezetnek fel kell térképeznie külső környezetét, például a piacokat, technológiai trendeket és jogi környezetet, valamint belső adottságait, mint a kultúra, erőforrások és képességek. Az érdekelt felek – ügyfelek, partnerek, alkalmazottak – igényeinek és elvárásainak megértése kulcsfontosságú, hogy az innováció valódi értéket teremtsen. Az innovációs szándék megfogalmazása világos irányt szab az innovációs tevékenységeknek, összhangban a szervezet stratégiai céljaival. Ez a lépés biztosítja, hogy az innováció nemcsak ötletszinten maradjon, hanem szervesen illeszkedjen a vállalat stratégiájába. </p>
             <div class="section">
-                <h2>Környezet elemzése</h2>
-                <p>Értékelje a szervezet külső (piaci, technológiai, jogi) és belső tényezőit (kultúra, erőforrások).</p>
-                <p>Feladat: elemzések (pl. SWOT, PESTLE) létrehozása és kezelése.</p>
-                <a href="environment-analysis.html">Tovább az oldalra →</a>
+                <h2>Teljesítménymérés</h2>
+                <p>Azonosítsa azokat az indikátorokat, amelyek a rendszer működését és eredményességét mérik.</p>
+                <a href="performance-dashboard.html">Tovább az oldalra →</a>
             </div>
             <div class="section">
-                <h2>Érdekelt felek igényeinek megértése</h2>
-                <p>Azonosítsa a partnerek, ügyfelek és alkalmazottak igényeit és elvárásait.</p>
-                <p>Feladat: érdekelt felek igényeinek és elvárásainak kezelése.</p>
-                <a href="stakeholders.html">Tovább az oldalra →</a>
+                <h2>Felülvizsgálat</h2>
+                <p>A vezetők rendszeresen vizsgálják felül az innovációs rendszert, és hozzanak döntéseket a fejlesztésről.</p>
+                <a href="management_review.html">Tovább az oldalra →</a>
             </div>
             <div class="section">
-                <h2>Innovációs szándék megfogalmazása</h2>
-                <p>Határozza meg, hogyan fogja az innováció támogatni a szervezet stratégiáját és céljait.</p>
-                <p>Feladat: az innovációs szándék meghatározása és nyilvántartása.</p>
-                <a href="innovation-intent.html">Tovább az oldalra →</a>
+                <h2>Fejlesztési terv készítése</h2>
+                <p>Az innovációs rendszer javítása érdekében készítsen új terveket.</p>
+                <a href="development_plan.html">Tovább az oldalra →</a>
             </div>
         </div>
     </div>
